zerotrust_config/cilium/EfficientNetB0_policy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ensemble-to-efficientnetb0
spec:
  endpointSelector:
    matchLabels:
      app: efficientnetb0
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: ensemble
    - toPorts:
        - ports:
            - port: "5012"
              protocol: TCP
