zerotrust_config/cilium/MobileNetV2_policy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ensemble-to-mobilenetv2
spec:
  endpointSelector:
    matchLabels:
      app: mobilenetv2
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: ensemble
    - toPorts:
        - ports:
            - port: "5012"
              protocol: TCP
