zerotrust_config/cilium/ensemble_policy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-preprocessing-to-ensemble
spec:
  endpointSelector:
    matchLabels:
      app: ensemble
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: preprocessing
    - toPorts:
        - ports:
            - port: "5011"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ensemble-egress
spec:
  endpointSelector:
    matchLabels:
      app: ensemble
  egress:
    - toEndpoints:
        - matchLabels:
            app: mobilenetv2
        - matchLabels:
            app: efficientnetb0
    - toPorts:
        - ports:
            - port: "5012"
              protocol: TCP
